<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/registerUI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/text_register_user"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:hint="@string/username"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/white"
        android:background="@drawable/input_bg"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/registerUI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"
        android:autofillHints="username"
        android:inputType="text" />
    <EditText
        android:id="@+id/text_email"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="35dp"
        android:textColorHint="@color/white"
        android:background="@drawable/input_bg"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_register_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="15dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/text_register_password"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:layout_marginTop="35dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/white"
        android:background="@drawable/input_bg"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="15dp"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/regis_button"
        android:layout_width="335dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/text_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btn_bg"
        android:layout_marginTop="35dp"
        android:text="Register"
        />
    <EditText
        android:id="@+id/text_confirm"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:hint="@string/cf_password"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="35dp"
        android:textColorHint="@color/white"
        android:background="@drawable/input_bg"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="15dp"
        android:autofillHints="confirm password"
        android:inputType="textPassword" />
    <TextView
        android:id = "@+id/register"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/regis_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>