<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/back1">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_care"
        android:textColor="#448AFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/loginUI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#BBDEFB"
        android:textSize="40sp"
        android:layout_marginBottom="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/text_user"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:hint="@string/username"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/white"
        android:background="@drawable/input_bg"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/loginUI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"
        android:autofillHints="username"
        android:inputType="text" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:layout_marginTop="35dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/white"
        android:background="@drawable/input_bg"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="15dp"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_width="335dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btn_bg"
        android:layout_marginTop="35dp"
        android:text="Log in"
        />
    <TextView
        android:id = "@+id/register"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>